# SwappyRosSensorHub

./: CMakeLists.txt  README.md  package.xml
msg/: SensorHubState.msg
src/: Arguments.hpp  client.cpp  node.cpp
src/configuration/: ClientConfiguration.hpp  NodeConfiguration.hpp  SpiConfiguration.hpp
src/protocol/: AllSensorData.cpp  AllSensorData.hpp  Commands.hpp  Device.hpp  Handler.cpp  Handler.hpp  RadarActivity.hpp  SensorData.cpp  SensorData.hpp
