<?xml version="1.0"?>
<package format="2">
    <name>swappy_ros_sensor_hub</name>
    <version>1.0.0</version>
    <description>SensorHub Publisher/Subscriber for Swappy Rover</description>
    <maintainer email="test@test.com">Sebastian Ehnert</maintainer>
    <license>BSD-3-Clause</license>
    <author email="test@test.com">Sebastian Ehnert</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
</package>